--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <!-- Container : Header -->
-    <header>
+    <header class="sticky top-0">
         <!-- Section : Nav -->
         <nav class="bg-navbg">
             <div class="w-11/12 mx-auto flex justify-between items-center p-1 md:p-3">
@@ -59,17 +59,19 @@
         
 
         <!-- Section : Buttons -->
-        <section class="w-11/12 mt-7 md:mt-10 mx-auto px-3">
-            <div class="text-center">
-                <button id="donation-btn" class="btn bg-primary text-sm md:text-lg px-4 md:px-6 hover:bg-lime-50 border hover:border-primary font-semibold mr-2">Donation</button>
-                <button id="history-btn" class="btn bg-white border hover:bg-white hover:border-primary text-sm md:text-lg px-4 md:px-6 ml-2">History</button>
+        <section class="bg-slate-50">
+            <div class="w-11/12 pt-5 md:pt-10 pb-7 mx-auto px-3">
+                <div class="text-center">
+                    <button id="donation-btn" class="btn bg-primary text-sm md:text-lg px-4 md:px-6 hover:bg-lime-50 border hover:border-primary font-semibold mr-2">Donation</button>
+                    <button id="history-btn" class="btn bg-white border hover:bg-white hover:border-primary text-sm md:text-lg px-4 md:px-6 ml-2">History</button>
+                </div>
             </div>
         </section>
 
     </header>
 
     <!-- Container : Main -->
-    <main id="main-section" class="mt-7 md:mt-10 mb-5 md:mb-10">
+    <main id="main-section" class="mt-5 md:mt-10 mb-5 md:mb-10">
         <!-- Section : Card 1 -->
         <section class="lg:w-10/12 mx-auto">
             <div class="flex gap-6 flex-col md:flex-row border rounded-2xl p-5 lg:p-7">
