--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <!-- Container : Header -->
-    <header class="sticky top-0">
+    <header class="sticky top-0 backdrop-blur-md">
         <!-- Section : Nav -->
         <nav class="bg-navbg">
             <div class="w-11/12 mx-auto flex justify-between items-center p-1 md:p-3">
@@ -59,7 +59,7 @@
         
 
         <!-- Section : Buttons -->
-        <section class="bg-slate-50">
+        <section class=>
             <div class="w-11/12 pt-5 md:pt-10 pb-7 mx-auto px-3">
                 <div class="text-center">
                     <button id="donation-btn" class="btn bg-primary text-sm md:text-lg px-4 md:px-6 hover:bg-lime-50 border hover:border-primary font-semibold mr-2">Donation</button>
